--- a/WebAdmin/wwwroot/_resources/styles/docombAdmin.css
+++ b/WebAdmin/wwwroot/_resources/styles/docombAdmin.css
@@ -137,7 +137,8 @@ html a {
   align-items: center;
   padding: 10px;
   color: inherit;
-  text-decoration: none; }
+  text-decoration: none;
+  position: relative; }
   html .sideBarItem a:hover {
     background: #eee; }
   .dark .sideBarItem a:hover {
@@ -164,3 +165,29 @@ html a {
   display: inline-block;
   flex: 1 1 100%;
   font-size: 14px; }
+
+.sideBarItem a:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 10px;
+  bottom: 10px;
+  left: 0;
+  border-left: 3px solid transparent;
+  transition: top 0.267s cubic-bezier(0.1, 0.25, 0.75, 0.9) 0s, bottom 0.267s cubic-bezier(0.1, 0.25, 0.75, 0.9) 0s; }
+
+html .sideBarItem.selected a:before {
+  border-color: #039; }
+
+.dark .sideBarItem.selected a:before {
+  border-color: #0bf; }
+
+@media (prefers-color-scheme: dark) {
+  html .sideBarItem.selected a:before {
+    border-color: #0bf; }
+  .light .sideBarItem.selected a:before {
+    border-color: #039; } }
+
+.sideBarItem.selected a:hover:before {
+  top: 0;
+  bottom: 0; }
