--- a/WebAdmin/wwwroot/_resources/styles/docombAdmin.scss
+++ b/WebAdmin/wwwroot/_resources/styles/docombAdmin.scss
@@ -1,5 +1,5 @@
 ﻿// Style reset & basics
-body { border: none; margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; overflow: hidden; }
+body { border: none; margin: 0; padding: 0; font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif; overflow: hidden; }
 h1, h2, h3, h4, h5, h6 { margin: 30px 0 15px 0; padding: 0; }
 h1 + h2, h1 + h3, h1 + h4, h1 + h5, h1 + h6,
 h2 + h3, h2 + h4, h2 + h5, h2 + h6,
@@ -26,6 +26,8 @@ $menuBackgroundColor: ( 'dark': #333, 'light': #eee );
 $menuBorderColor: ( 'dark': #494949, 'light': #eee );
 $linkColor: ( 'dark': #0bf, 'light': #039 );
 $accentColor: ( 'dark': #0bf, 'light': #039 );
+$buttonHoverColor: ( 'dark': rgba(255, 255, 255, .1), 'light': rgba(0, 0, 0, .1) );
+$buttonActiveColor: ( 'dark': rgba(255, 255, 255, .13), 'light': rgba(0, 0, 0, .13) );
 
 
 $tabletWidth: 800px;
@@ -110,10 +112,24 @@ html { @include lightPreset; }
 		border-right: 1px solid;
 		box-sizing: content-box;
 		@include themeMap("background", $menuBackgroundColor);
+		.loadingSpinner { padding: 20px 0; }
 		> [role="toolbar"] { display: flex; height: 100%; width: 100%; flex-direction: column;
-			> [role="tablist"] { flex: 0 0 auto; }
+			> [role="tablist"] { flex: 0 0 auto;
+				button:hover { @include themeMaps(("color": $accentColor, "background": $buttonHoverColor)); }
+				button:active { @include themeMap("background", $buttonActiveColor); }
+			}
 			> [role="tabpanel"] { flex: 1 1 100%; overflow: auto; width: 250px;
 				/*a { white-space: normal; line-height: inherit; height: auto; }*/
+			}
+			.is-selected > button { background: transparent;
+				&::after { display: none; }
+			}
+			[role="listitem"] .is-selected a {
+				@include themeMap("background", $buttonHoverColor);
+			}
+			[role="listitem"] button, [role="listitem"] a {
+				&:hover { @include themeMap("background", $buttonHoverColor); }
+				&:active { @include themeMap("background", $buttonActiveColor); }
 			}
 		}
 	}
@@ -126,9 +142,8 @@ html { @include lightPreset; }
 
 .sideBarItem {
 	a { display: flex; align-items: center; padding: 10px; color: inherit; text-decoration: none; position: relative;
-		&:hover {
-			@include themeMap("background", $menuBackgroundColor);
-		}
+		&:hover { @include themeMaps(("color": $accentColor, "background": $buttonHoverColor)); }
+		&:active { @include themeMap("background", $buttonActiveColor); }
 	}
 	.icon { display: inline-block; flex: 0 0 30px; width: 30px; height: 30px; font-size: 20px; line-height: 30px; text-align: center; overflow: hidden; font-weight: bold; margin-right: 10px; }
 	.name { display: inline-block; flex: 1 1 100%; font-size: 14px; }
@@ -138,5 +153,15 @@ html { @include lightPreset; }
 	}
 	&.selected a:before { @include themeMap("border-color", $accentColor); }
 	&.selected a:hover:before { top: 0; bottom: 0; }
+}
+
+
+
+
+.pageGrid { width: 100%; height: 100%; overflow: hidden; display: flex; flex-direction: column;
+	.pageTitle { flex: 0 0 auto; padding: 0 10px 10px 10px; width: 100%; }
+	.pageCommands { flex: 0 0 auto; width: 100%; }
+	.pageContent { flex: 1 1 100%; overflow: auto; }
+	.pageTitle + .pageContent, .pageCommands + .pageContent { border-top: 1px solid; @include themeMap("border-color", $menuBorderColor); }
 }
 
