--- a/WebAdmin/Areas/Admin/Pages/Index.cshtml
+++ b/WebAdmin/Areas/Admin/Pages/Index.cshtml
@@ -5,8 +5,11 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 	<title>@(Docomb.WebCore.Configurations.MainConfig.Instance.SiteName)</title>
 	<base href="@ViewBag.baseHref" />
-	<link rel="stylesheet" href="~/_resources/styles/docombAdmin.css" />
-	<script>window["basePath"] = @Json.Serialize(ViewBag.basePath);</script>
+	<link rel="stylesheet" href="~/_resources/styles/docomb/admin.css" />
+	<script>
+		window["basePath"] = @Json.Serialize(ViewBag.basePath);
+		window["readerBasePath"] = @Json.Serialize(ViewBag.readerBasePath);
+	</script>
 </head>
 <body>
 	<div id="root"></div>
