--- a/WebAdmin/wwwroot/_resources/styles/docomb/admin.scss
+++ b/WebAdmin/wwwroot/_resources/styles/docomb/admin.scss
@@ -1,6 +1,11 @@
-﻿// Style reset & basics
+﻿@import "shared/theme.scss";
+
+// Style reset & basics
 body { border: none; margin: 0; padding: 0; font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif; overflow: hidden; }
-h1, h2, h3, h4, h5, h6 { margin: 30px 0 15px 0; padding: 0; }
+h1, h2, h3, h4, h5, h6 { margin: 30px 0 15px 0; padding: 0;
+	&:first-child { margin-top: 0; }
+	&:last-child { margin-bottom: 0; }
+}
 h1 + h2, h1 + h3, h1 + h4, h1 + h5, h1 + h6,
 h2 + h3, h2 + h4, h2 + h5, h2 + h6,
 h3 + h4, h3 + h5, h3 + h6,
@@ -14,43 +19,10 @@ figure > img { display: block; }
 ul, ol { margin-left: 30px; }
 li > ul, li > ol { margin-top: 0; margin-bottom: 0; }
 
+* { box-sizing: border-box; }
 
 
 
-
-// Light/Dark theme setting and mixins
-$bgColor: ( 'dark': #191919, 'light': #fff );
-$textColor: ( 'dark': #fff, 'light': #000 );
-$textColorLight: ( 'dark': #ccc, 'light': #666 );
-$menuBackgroundColor: ( 'dark': #333, 'light': #eee );
-$menuBorderColor: ( 'dark': #494949, 'light': #eee );
-$linkColor: ( 'dark': #0bf, 'light': #039 );
-$accentColor: ( 'dark': #0bf, 'light': #039 );
-$buttonHoverColor: ( 'dark': rgba(255, 255, 255, .1), 'light': rgba(0, 0, 0, .1) );
-$buttonActiveColor: ( 'dark': rgba(255, 255, 255, .13), 'light': rgba(0, 0, 0, .13) );
-
-
-$tabletWidth: 800px;
-
-@mixin aboveTablet {
-	@media all and (min-width: $tabletWidth), print {
-		@content;
-	}
-}
-@mixin belowTablet {
-	@media not all and (min-width: $tabletWidth) {
-		@content;
-	}
-}
-
-@mixin padding {
-	padding: 20px;
-	@include belowTablet { padding: 10px; }
-}
-@mixin hPadding {
-	padding-left: 20px; padding-right: 20px;
-	@include belowTablet { padding-left: 10px; padding-right: 10px; }
-}
 
 
 
@@ -72,22 +44,6 @@ html { @include lightPreset; }
 	.light { @include lightPreset; }
 }
 
-@mixin themeMaps($values) {
-	html & { @each $property, $value in $values { #{$property}: map-get($value, 'light'); } }
-	.dark & { @each $property, $value in $values { #{$property}: map-get($value, 'dark'); } }
-	@media (prefers-color-scheme: dark) {
-		html & { @each $property, $value in $values { #{$property}: map-get($value, 'dark'); } }
-		.light & { @each $property, $value in $values { #{$property}: map-get($value, 'light'); } }
-	}
-}
-@mixin themeMap($property, $value) {
-	html & { #{$property}: map-get($value, 'light'); }
-	.dark & { #{$property}: map-get($value, 'dark'); }
-	@media (prefers-color-scheme: dark) {
-		html & { #{$property}: map-get($value, 'dark'); }
-		.light & { #{$property}: map-get($value, 'light'); }
-	}
-}
 
 
 
@@ -136,7 +92,7 @@ html { @include lightPreset; }
 	> .sideBarNav, .mainNav, > .sideBarNav .sideBar .system {
 		@include themeMap("border-color", $menuBorderColor);
 	}
-	> .mainNavGridContent { flex: 1 1 100%; }
+	> .mainNavGridContent { flex: 1 1 100%; overflow: hidden; }
 }
 
 
@@ -159,9 +115,30 @@ html { @include lightPreset; }
 
 
 .pageGrid { width: 100%; height: 100%; overflow: hidden; display: flex; flex-direction: column;
-	.pageTitle { flex: 0 0 auto; padding: 0 10px 10px 10px; width: 100%; }
+	.pageTitle { flex: 0 0 auto; padding: 0px 24px 10px 24px; width: 100%; }
 	.pageCommands { flex: 0 0 auto; width: 100%; }
 	.pageContent { flex: 1 1 100%; overflow: auto; }
+	.pageTitle + .pageCommands { margin-top: -10px; }
 	.pageTitle + .pageContent, .pageCommands + .pageContent { border-top: 1px solid; @include themeMap("border-color", $menuBorderColor); }
 }
+
+
+
+
+.contentFileDetails { display: flex; width: 100%; height: 100%;
+	.articleContent { flex: 1 1 100%; overflow: auto; padding: 32px; }
+	.metaInfo { flex: 0 0 250px; padding: 16px; height: 100%; overflow: auto; border-left: 1px solid; @include themeMaps(("border-color": $menuBorderColor, "background": $menuBackgroundColor));
+		/*h2 { margin-top: 0; }*/
+		h2 i { vertical-align: middle; }
+	}
+}
+
+
+
+
+
+
+
+
+@import "article.scss";
 
