--- a/WebReader/Areas/Reader/Pages/Directory.cshtml
+++ b/WebReader/Areas/Reader/Pages/Directory.cshtml
@@ -5,11 +5,11 @@
 }
 
 <div class="pageContent">
-	@{ Dictionary<string, ContentItemSummary> children = ViewBag.Context?.Workspace?.Content?.GetChildren(ViewBag.Context?.PathParts); }
+	@{ List<ContentItemSummary> children = ViewBag.Context?.Workspace?.Content?.GetChildren(ViewBag.Context?.PathParts); }
 	@if (children?.Count > 0)
 	{
 		<ul class="directoryChildSelection">
-			@foreach (ContentItemSummary child in children.Values)
+			@foreach (ContentItemSummary child in children)
 			{
 				<li><a href="@child.FullUrl">@child.Title</a></li>
 			}
