--- a/WebAdmin/wwwroot/_resources/styles/docomb/admin.scss
+++ b/WebAdmin/wwwroot/_resources/styles/docomb/admin.scss
@@ -1,7 +1,7 @@
 ﻿@import "shared/theme.scss";
 
 // Style reset & basics
-body { border: none; margin: 0; padding: 0; font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif; overflow: hidden; }
+body { border: none; margin: 0; padding: 0; font-family: $fontFamily; overflow: hidden; }
 h1, h2, h3, h4, h5, h6 { margin: 30px 0 15px 0; padding: 0;
 	&:first-child { margin-top: 0; }
 	&:last-child { margin-bottom: 0; }
@@ -131,7 +131,7 @@ html { @include lightPreset; }
 
 
 .emptyPage { position: relative; width: 100%; height: 100%; overflow: hidden;
-	.watermark { position: absolute; left: 50%; top: 50%; font-size: 20vmin; margin: -10vmin; opacity: .2;
+	.watermark { position: absolute; left: 50%; top: 50%; font-size: 20vmin; margin: -10vmin; opacity: .1;
 		i { width: 1em; height: 1em; margin: 0; padding: 0; }
 	}
 }
@@ -139,14 +139,25 @@ html { @include lightPreset; }
 
 .contentFileDetails { display: flex; width: 100%; height: 100%;
 	.articleContent { flex: 1 1 100%; overflow: auto; padding: 32px; }
-	.metaInfo { flex: 0 0 250px; padding: 16px; height: 100%; overflow: auto; border-left: 1px solid; @include themeMaps(("border-color": $menuBorderColor, "background": $menuBackgroundColor));
+	.metaInfo { flex: 0 0 400px; max-width: 40%; padding: 16px; height: 100%; overflow: auto; border-left: 1px solid; @include themeMaps(("border-color": $menuBorderColor, "background": $menuBackgroundColor));
 		/*h2 { margin-top: 0; }*/
 		h2 i { vertical-align: middle; }
+		.item { display: flex; justify-content: flex-start; align-items: flex-start;
+			> b { flex: 0 0 auto; max-width: 40%; margin-right: 8px; }
+			> span { flex: 1 1 100; overflow-wrap: anywhere; }
+			+ .item { margin-top: 8px; }
+		}
 	}
 }
 
 
-
+.editTextFile { display: flex; width: 100%; height: 100%;
+	.editor { flex: 1 1 50%; overflow: hidden;
+		* { width: 100%; height: 100%; margin: 0; }
+		textarea { padding: 32px; font-family: $fontFamilyMono; }
+	}
+	.preview { flex: 1 1 50%; max-width: 50%; overflow: auto; padding: 32px; border-left: 1px solid; @include themeMap("border-color", $menuBorderColor); }
+}
 
 
 
