--- a/WebAdmin/wwwroot/_resources/styles/docomb/admin.scss
+++ b/WebAdmin/wwwroot/_resources/styles/docomb/admin.scss
@@ -137,6 +137,13 @@ html { @include lightPreset; }
 }
 
 
+.errorPage { position: relative; width: 100%; height: 100%; overflow: hidden;
+	.codeWatermark { z-index: 1; font-size: 20vmin; height: 1.4em; line-height: 1.4em; margin: -.75em 0 -.65em 0; opacity: .1; font-weight: bold; }
+	.message { z-index: 2; font-size: 5vmin; height: 1.4em; line-height: 1.4em; margin: -.7em 0; font-weight: bold; text-transform: uppercase; }
+	.codeWatermark, .message { position: absolute; left: 0; top: 50%; width: 100%; height: 1.4em; line-height: 1.4em; text-align: center; overflow: hidden; user-select: none; }
+}
+
+
 .contentFileDetails { display: flex; width: 100%; height: 100%;
 	.articleContent { flex: 1 1 100%; overflow: auto; padding: 32px; }
 	.metaInfo { flex: 0 0 400px; max-width: 40%; padding: 16px; height: 100%; overflow: auto; border-left: 1px solid; @include themeMaps(("border-color": $menuBorderColor, "background": $menuBackgroundColor));
