--- a/WebAdmin/wwwroot/_resources/styles/docomb/admin.scss
+++ b/WebAdmin/wwwroot/_resources/styles/docomb/admin.scss
@@ -168,6 +168,8 @@ html { @include lightPreset; }
 
 
 
+.invisibleUploadInput { width: 0; height: 0; overflow: hidden; display: block; }
+
 
 
 @import "article.scss";
